--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
@@ -46,6 +48,5 @@
       "last 1 safari version"
     ]
   },
-
-  "proxy":"http://192.168.0.102:4000"
+  "proxy": "http://192.168.0.102:4000"
 }
